--- a/fedora_i3/config
+++ b/fedora_i3/config
@@ -18,7 +18,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
+font pango:JetBrainsMono 8
 
 ##display configuration 
 exec xrandr --rate 60.00
@@ -236,3 +236,12 @@ bindsym $mod+p exec grim
 bindsym $mod+Shift+p exec grim -g "$(slurp)"
 ##
 
+
+##gaps
+# Add this to create gaps
+gaps inner 4
+gaps outer 4
+
+#ugly window title bar 
+default_border pixel 1
+default_floating_border pixel 1
